crates/syntax/src/parser2/snapshots/mu_syntax__parser2__tests__call_expr.snap
---
source: crates/syntax/src/parser2/tests.rs
expression: module
---
Call(
    Call {
        target: GetVar(
            GetVar {
                name: "a",
            },
        ),
        args: Args {
            pos: [
                GetVar(
                    GetVar {
                        name: "b",
                    },
                ),
                GetVar(
                    GetVar {
                        name: "c",
                    },
                ),
            ],
            kw: [
                (
                    "d",
                    GetVar(
                        GetVar {
                            name: "e",
                        },
                    ),
                ),
                (
                    "f",
                    GetVar(
                        GetVar {
                            name: "g",
                        },
                    ),
                ),
            ],
        },
    },
)
