crates/syntax/src/parser2/snapshots/mu_syntax__parser2__tests__import_stmt-2.snap
---
source: crates/syntax/src/parser2/tests.rs
expression: module
---
Module {
    imports: [
        Import {
            path: [
                "a",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "a",
                "b",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "a",
                "b",
                "c",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "a",
                "b",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "a",
                "c",
            ],
            alias: Some(
                "y",
            ),
        },
        Import {
            path: [
                "a",
                "b",
                "c",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "a",
                "d",
                "e",
            ],
            alias: Some(
                "y",
            ),
        },
        Import {
            path: [
                "a",
                "b",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "c",
                "d",
            ],
            alias: Some(
                "y",
            ),
        },
        Import {
            path: [
                "a",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "b",
            ],
            alias: Some(
                "y",
            ),
        },
        Import {
            path: [
                "c",
            ],
            alias: Some(
                "z",
            ),
        },
    ],
    body: [],
}
