crates/syntax/src/parser2/snapshots/mu_syntax__parser2__tests__import_stmt-3.snap
---
source: crates/syntax/src/parser2/tests.rs
expression: errors
---
[31merror[0m: invalid indentation
[34m>[0m code:2
[34m|[0m 
[34m|[0m   [31;4muse[0m b
[34m|[0m 


