crates/syntax/src/parser2/snapshots/mu_syntax__parser2__tests__postfix_expr.snap
---
source: crates/syntax/src/parser2/tests.rs
expression: module
---
GetField(
    GetField {
        target: GetField(
            GetField {
                target: GetField(
                    GetField {
                        target: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        key: Literal(
                            String(
                                "b",
                            ),
                        ),
                    },
                ),
                key: GetVar(
                    GetVar {
                        name: "c",
                    },
                ),
            },
        ),
        key: Literal(
            String(
                "d",
            ),
        ),
    },
)
