crates/syntax/src/parser2/snapshots/mu_syntax__parser2__tests__unary_expr-2.snap
---
source: crates/syntax/src/parser2/tests.rs
expression: module
---
Unary(
    Unary {
        op: Minus,
        right: GetVar(
            GetVar {
                name: "a",
            },
        ),
    },
)
