crates/syntax/src/parser2/snapshots/mu_syntax__parser2__tests__unary_expr-3.snap
---
source: crates/syntax/src/parser2/tests.rs
expression: module
---
Unary(
    Unary {
        op: Not,
        right: GetVar(
            GetVar {
                name: "a",
            },
        ),
    },
)
